k8s/itop/component_itop.yaml
###########################
# Deployment
###########################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itop-dev-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: itop-dev
  template:
    metadata:
      labels:
        component: itop-dev
    spec:
      volumes:
        - name: itop-dev-data
          persistentVolumeClaim:
            claimName: itop-dev-persistent-volume-claim
      containers:
        - name: itop-dev-container
          image: vbkunin/itop
          ports:
            - containerPort: 80
          volumeMounts:
            - name: itop-dev-data
              mountPath: /var/www/html/conf
              subPath: itop-conf
            - name: itop-dev-data
              mountPath: /var/lib/mysql
              subPath: itop-mysql
          resources:
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
###########################
# Cluster IP Service
###########################
apiVersion: v1
kind: Service
metadata:
  name: itop-dev-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: itop-dev
  ports:
    - port: 8000
      targetPort: 80
