k8s/itop/ingress_service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          ################
          # URL ROUTING #
          ################
          - path: /
            pathType: Prefix
            backend:
              service:
                name: itop-dev-cluster-ip-service
                port:
                  number: 8000
